--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "dev": "bun main.ts"
+  },
   "dependencies": {
     "@types/node-telegram-bot-api": "^0.64.9",
     "node-telegram-bot-api": "^0.66.0",
