--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "scripts": {
-    "dev": "bun main.ts"
+    "dev": "bun main.ts",
+    "migrate": "node-pg-migrate"
   },
   "dependencies": {
     "@types/node-telegram-bot-api": "^0.64.9",
     "node-telegram-bot-api": "^0.66.0",
+    "pg": "^8.16.2",
     "postgres": "^3.4.7"
+  },
+  "devDependencies": {
+    "node-pg-migrate": "^8.0.3"
   }
 }
